footer not showing fix

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,8 +1,8 @@
 /* Footer */
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  //position: fixed;
+  //bottom: 0;
+  //left: 0;
   width: 100%;
   height: 34vh;
   background: var(--links);
